--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@
 
 html,
 body {
-    background-color: #******;
+    background-color: #1b181f;
     height: 100vh;
     margin: 0;
     padding: 0;
